--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 ###> symfony/phpunit-bridge ###
 .phpunit.result.cache
 /phpunit.xml
+.idea
 ###< symfony/phpunit-bridge ###
 
 ###> symfony/asset-mapper ###
